# serde-saphyr

./: Cargo.toml
examples/: test_description.rs  test_wrap.rs  test_wrap_analyze.rs  test_wrap_correct.rs  test_wrap_double.rs  test_wrap_golike.rs  test_wrap_golike2.rs  test_wrap_golike3.rs  test_wrap_trace.rs  test_wrap_trace2.rs  test_wrap_trace3.rs  test_wrap_trace4.rs  test_wrap_trace5.rs  test_wrap_trace6.rs  test_wrap_trace_cols.rs  test_wrap_width.rs
src/: de.rs  lib.rs  parse_scalars.rs  ser.rs  ser_quoting.rs  serializer_options.rs  tags.rs
tests/: block_scalar_indentation.rs  critical_line_folding.rs  dash_quoting.rs  deeply_nested_array.rs  empty_map_braces.rs  empty_vector.rs  go_yaml_compat.rs  indent_array.rs  number_bases.rs  quoted_multiline_wrap.rs  serialize_string_fields_quoted.rs  test_ambiguous_keys.rs  test_block_scalar_chomp.rs  test_block_scalar_indent_in_seq.rs  test_block_str.rs  test_comment_like_string.rs  test_flowseq_escapes.rs  test_line_width.rs  test_options_block.rs  test_prefer_block_scalars.rs  test_quote_style.rs  test_quoted_line_wrap.rs  test_scientific_notation.rs  test_trailing_whitespace.rs
tests/serde_yaml/: test_composite_keys.rs  test_no_panic.rs  test_serde.rs
