[package]
name = "serde-saphyr"
version = "0.0.11"
edition = "2024"
license = "MIT"
description = "YAML deserializer for Serde, built on top of Saphyr, emphasizing panic-free parsing."
documentation = "https://docs.rs/serde-saphyr/latest/serde-saphyr/"
repository = "https://github.com/bourumir-wyngs/serde-saphyr"
readme = "README.md"
categories = ["encoding", "parser-implementations", "config"]
keywords = ["yaml", "serde", "serialization", "config", "ros"]

[dependencies]
saphyr-parser = { git = "https://github.com/grafana/saphyr", branch = "master" }
serde = { version = "1", features = ["derive"] }
# Our all tests are fine with alpha.
smallvec = "2.0.0-alpha.12"
serde_json = "1.0.145"
num-traits = "0.2.19"
base64 = "0.22.1"
ryu = "1.0.20"
nohash-hasher = "0.2.0"
encoding_rs_io = "0.1.7"
ahash = "0.8.12"

[features]
default = []

# Adds YAML conventions common in robotics: conversion functions (deg, rad) and simple mathematical expressions such
# as deg(180), rad(pi), 1 + 2*(3 - 4/5), or rad(pi/2). angle_conversions must be set to true in the Options.
robotics = []

[dev-dependencies]
indoc = "2.0.6"
serde_bytes = "0.11.19"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.20"
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12"
nalgebra = { version = "0.34", features = ["serde-serialize"] }

[package.metadata]
status = "actively developed"

[lints.rust]
unsafe_code = "forbid"
